--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Webpack App</title><script defer="defer" src="main.js"></script></head><body><h1>Hello world!</h1><h2>Tip: Check your console</h2></body><script>if ("serviceWorker" in navigator) {
-            window.addEventListener("load", () => {
-                navigator.serviceWorker
-                    .register("service-worker.js")
-                    .then((registration) => {
-                        console.log("Service Worker registered: ", registration);
-                    })
-                    .catch((registrationError) => {
-                        console.error("Service Worker registration failed: ", registrationError);
-                    });
-            });
-        }</script></html>
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Selective Custom</title>
+    <script defer="defer" src="main.js"></script>
+</head>
+
+<body>
+    <h1>Вопрос: Что тут будет?</h1>
+    <h2>ответ: тут будет страница для заказа питерского кастома</h2>
+    <p>угум, понято</p>
+</body>
+
+</html>
