feat(layout): stylish product list n card

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Online Store</title>
+    <title>Ostaafzdes store</title>
+    // todo: add css bootstrap v8
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">handle made second</a>
+        </div>
+    </nav>
+
     <div id="root"></div>
+    <link rel="stylesheet" href="">
+    // todo: add js bootstrap v8
 </body>
 
 </html>
