feat(layout): stylish product list n loading status

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div id="root"></div>
     <link rel="stylesheet" href="">
     // todo: add js bootstrap v8
+    <div class="btn-group" role="group" aria-label="">
+        <button type="button" class="btn btn-primary">Назад</button>
+        <button type="button" class="btn btn-primary">Вперёд</button>
+    </div>
 </body>
 
 </html>
